apps/darkstar/pod-info.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
